chore: 회원가입, 로그인 링크 추가

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta http-equiv="Content-Type" content = "text/html; charset=UTF-8" />
-    <title>Hello</title>
+	<meta charset="UTF-8">
+	<title>index</title>
 </head>
 <body>
-Hello
-<a href = "/hello">hello</a>
+	<h2>Hello</h2>
+	<a href="/save.html">회원가입</a>
+	<a href="/member/login">로그인</a>
 </body>
 </html>
