--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 	<h2>Hello</h2>
 	<a href="/save.html">회원가입</a>
-	<a href="/member/login">로그인</a>
+	<a href="/login.html">로그인</a>
 	<a href="/wishlistCategory.html">카테고리 관리</a>
 </body>
 </html>
