feat: main.html에 '내 정보 수정하기' 링크 추가

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -8,6 +8,7 @@
 	<h2>로그인한 아이디 확인:</h2>
     <p id="loginId">세션 확인 중...</p>
 	<a href="/wishlistCategory.html">카테고리 관리</a>
+	<a href="/memberUpdate.html">내 정보 수정하기</a>
 	
     <script>
         fetch('/api/session/login-id')
