--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -9,22 +9,52 @@
     <p id="loginId">세션 확인 중...</p>
 	<a href="/wishlistCategory.html">카테고리 관리</a>
 	<a href="/memberUpdate.html">내 정보 수정하기</a>
+	<button id="deleteMemberBtn">회원 탈퇴</button>
 	
     <script>
-        fetch('/api/session/login-id')
-            .then(response => response.text())
-            .then(data => {
-                const loginIdElement = document.getElementById('loginId');
-                if (data === 'NO_SESSION') {
-                    loginIdElement.innerText = '로그인되지 않았습니다.';
-                } else {
-                    loginIdElement.innerText = `로그인 아이디: ${data}`;
-                }
-            })
-            .catch(error => {
-                console.error('세션 조회 실패:', error);
-                document.getElementById('loginId').innerText = '오류 발생';
-            });
+	    fetch('/api/session/login-id')
+	    .then(response => response.text())
+	    .then(data => {
+	        const loginIdElement = document.getElementById('loginId');
+	        if (data === 'NO_SESSION') {
+	            loginIdElement.innerText = '로그인되지 않았습니다.';
+	        } else {
+	            loginId = data;
+	            loginIdElement.innerText = `로그인 아이디: ${data}`;
+	        }
+	    })
+	    .catch(error => {
+	        console.error('세션 조회 실패:', error);
+	        document.getElementById('loginId').innerText = '오류 발생';
+	    });
+	
+		// 회원 탈퇴 버튼 클릭 시
+		document.getElementById('deleteMemberBtn').addEventListener('click', () => {
+		    if (!loginId) {
+		        alert('로그인 정보가 없습니다.');
+		        return;
+		    }
+	
+	    const confirmed = confirm('정말로 회원 탈퇴하시겠습니까? 이 작업은 되돌릴 수 없습니다.');
+	
+	    if (confirmed) {
+	        fetch(`/member/delete/${loginId}`, {
+	            method: 'DELETE'
+	        })
+	        .then(response => {
+	            if (response.ok) {
+	                alert('회원 탈퇴가 완료되었습니다.');
+	                window.location.href = '/login.html'; // 로그인 페이지로 이동
+	            } else {
+	                alert('회원 탈퇴에 실패했습니다.');
+	            }
+	        })
+	        .catch(error => {
+	            console.error('삭제 요청 중 오류 발생:', error);
+	            alert('오류가 발생했습니다.');
+	        });
+	    }
+	});
     </script>
 </body>
 </html>
