--- a/src/main/resources/static/wishlistCategory.html
+++ b/src/main/resources/static/wishlistCategory.html
@@ -1,32 +1,96 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>위시리스트 카테고리</title>
-	</head>
-	<body>
-		<h1>카테고리 추가하기</h1>
-		<a href="/wishlist/category/list">카테고리 추가</a>
-		<a href="/wishlist/category/2">카테고리 삭제</a>
-		
-		<div class="wishlist">
-			<div>
-				<form method="post" action="/wishlist/category/do">
-					<input type="text" name="categoryName" required placeholder="카테고리명 입력"/>
-					<button type="submit">추가</button>
-				</form>
-			</div>
-		<table>
-			<thead>
-				<th> ID </th>
-				<th> 카테고리명 </th>
-				<th> 순서 </th>
-			</thead>
-			<tbody>
-			
-			</tbody>
-		</table>
-		
-		</div>
-	</body>
+<head>
+    <meta charset="UTF-8">
+    <title>위시리스트 카테고리</title>
+</head>
+<body>
+    <h1>카테고리 추가하기</h1>
+
+    <div class="wishlist">
+        <div>
+            <form id="categoryForm">
+                <input type="text" id="categoryName" required placeholder="카테고리명 입력"/>
+                <button type="submit">추가</button>
+            </form>
+        </div>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>카테고리명</th>
+                    <th>삭제</th>
+                </tr>
+            </thead>
+            <tbody id="wishlist-table-body">
+                <!-- JavaScript로 렌더링 -->
+            </tbody>
+        </table>
+    </div>
+
+    <script>
+        // 카테고리 목록 로딩
+        document.addEventListener('DOMContentLoaded', () => {
+            loadWishlist();
+        });
+
+        function loadWishlist() {
+            fetch('/api/wishlist')
+                .then(response => response.json())
+                .then(data => {
+                    const tbody = document.getElementById('wishlist-table-body');
+                    tbody.innerHTML = '';
+                    data.forEach(item => {
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${item.wishlistName}</td>
+                            <td>
+                                <button onclick="deleteCategory(${item.id})">삭제</button>
+                            </td>
+                        `;
+                        tbody.appendChild(row);
+                    });
+                });
+        }
+
+        // 카테고리 추가
+        document.getElementById('categoryForm').addEventListener('submit', function (event) {
+            event.preventDefault(); // 기본 제출 막기
+
+            const categoryName = document.getElementById('categoryName').value;
+
+            fetch('/api/wishlist', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ wishlistName: categoryName })
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('카테고리 추가 성공!');
+                    document.getElementById('categoryName').value = ''; // 입력창 초기화
+                    loadWishlist(); // 목록 새로고침
+                } else {
+                    alert('카테고리 추가 실패');
+                }
+            });
+        });
+
+        // 카테고리 삭제
+        function deleteCategory(id) {
+            fetch(`/api/wishlist/${id}`, {
+                method: 'DELETE'
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('삭제 성공!');
+                    loadWishlist(); // 목록 새로고침
+                } else {
+                    alert('삭제 실패');
+                }
+            });
+        }
+    </script>
+</body>
 </html>
