--- a/src/main/resources/static/signup_finish.html
+++ b/src/main/resources/static/signup_finish.html
@@ -15,7 +15,9 @@
                 <input type="text" placeholder="검색어를 입력해주세요" />
             </div>
             <div class="header_logbtn">
-                <button type="button">로그인/회원가입</button>
+                <a href="../static/login.html">
+                    <button type="button">로그인/회원가입</button>
+                </a>
             </div>
         </header>
         <main>
