--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,72 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<title>main</title>
+    <meta charset="UTF-8">
+    <title>main</title>
 </head>
 <body>
-	<h2>로그인한 아이디 확인:</h2>
-    <p id="loginId">세션 확인 중...</p>
-	<a href="/wishlistCategory.html">카테고리 관리</a>
-	<a href="/memberUpdate.html">내 정보 수정하기</a>
-	<button onclick="logout()">로그아웃</button>
-	<button id="deleteMemberBtn">회원 탈퇴</button>
-	
-    <script>
-	    fetch('/api/session/login-id')
-	    .then(response => response.text())
-	    .then(data => {
-	        const loginIdElement = document.getElementById('loginId');
-	        if (data === 'NO_SESSION') {
-	            loginIdElement.innerText = '로그인되지 않았습니다.';
-	        } else {
-	            loginId = data;
-	            loginIdElement.innerText = `로그인 아이디: ${data}`;
-	        }
-	    })
-	    .catch(error => {
-	        console.error('세션 조회 실패:', error);
-	        document.getElementById('loginId').innerText = '오류 발생';
-	    });
-		
-	    function logout() {
-	        fetch('/api/logout', { method: 'POST' })
-	          .then(() => {
-	            alert('로그아웃 되었습니다.');
-	            window.location.href = '/login.html'; // 로그인 페이지로 이동
-	          })
-	          .catch(err => {
-	            console.error('로그아웃 오류', err);
-	          });
-	      }
-	    
-		// 회원 탈퇴 버튼 클릭 시
-		document.getElementById('deleteMemberBtn').addEventListener('click', () => {
-		    if (!loginId) {
-		        alert('로그인 정보가 없습니다.');
-		        return;
-		    }
-	
-	    const confirmed = confirm('정말로 회원 탈퇴하시겠습니까? 이 작업은 되돌릴 수 없습니다.');
-	
-	    if (confirmed) {
-	        fetch(`/member/delete/${loginId}`, {
-	            method: 'DELETE'
-	        })
-	        .then(response => {
-	            if (response.ok) {
-	                alert('회원 탈퇴가 완료되었습니다.');
-	                window.location.href = '/login.html'; // 로그인 페이지로 이동
-	            } else {
-	                alert('회원 탈퇴에 실패했습니다.');
-	            }
-	        })
-	        .catch(error => {
-	            console.error('삭제 요청 중 오류 발생:', error);
-	            alert('오류가 발생했습니다.');
-	        });
-	    }
-	});
-    </script>
+<h2>로그인한 아이디 확인:</h2>
+<p id="loginId">세션 확인 중...</p>
+<p id="password">세션 확인 중...</p>
+<p id="provider">세션 확인 중...</p>
+<p id="nickname">세션 확인 중...</p>
+<a href="/wishlistCategory.html">카테고리 관리</a>
+<a href="/memberUpdate.html">내 정보 수정하기</a>
+<button onclick="logout()">로그아웃</button>
+<button id="deleteMemberBtn">회원 탈퇴</button>
+<button onclick="endGoogleLogin()">회원 탈퇴2</button>
+
+<script>
+    let loginId = null; // 로그인 아이디 전역 변수
+    let password = null; // 로그인 아이디 전역 변수
+    let provider = null; // 로그인 아이디 전역 변수
+    let nickname = null; // 로그인 아이디 전역 변수
+
+    // 페이지 로드 시 로그인 아이디 가져오기
+    window.addEventListener('DOMContentLoaded', () => {
+        fetch('/api/session/login-id', {
+            method: 'GET',
+            credentials: 'include'
+        })
+            .then(response => response.json())
+            .then(res => {
+                const data = res.data;
+
+                const loginIdElement = document.getElementById('loginId');
+                const passwordElement = document.getElementById('password');
+                const providerElement = document.getElementById('provider');
+                const nicknameElement = document.getElementById('nickname');
+                if (data) {
+                    loginId = data.providerId;
+                    password = data.memberPassword;
+                    provider = data.provider;
+                    nickname = data.memberNickname;
+
+                    loginIdElement.textContent = `로그인 아이디: ${loginId}`;
+                    passwordElement.textContent = `로그인 비번: ${password}`;
+                    providerElement.textContent = `로그인 플랫폼: ${provider}`;
+                    nicknameElement.textContent = `로그인 닉네임: ${nickname}`;
+                } else {
+                    loginIdElement.textContent = "로그인 필요";
+                    passwordElement.textContent = "-";
+                    providerElement.textContent = "-";
+                    nicknameElement.textContent = "-";
+                }
+            })
+            .catch(error => {
+                console.error('세션 조회 실패:', error);
+                document.getElementById('loginId').textContent = '오류 발생';
+            });
+    });
+
+    function logout() {
+        fetch('/member/logout', {
+            method: 'POST',
+            credentials: 'include' // 쿠키 포함
+        })
+            .then(response => {
+                if (response.ok) {
+                    alert('로그아웃 되었습니다.');
+                    window.location.href = '/main.html'; // 로그인 페이지로 이동
+                } else {
+                    alert('로그아웃 실패');
+                }
+            })
+            .catch(err => {
+                console.error('로그아웃 오류', err);
+                alert('로그아웃 중 오류 발생');
+            });
+    }
+
+    // 회원 탈퇴 버튼 클릭 시
+    document.getElementById('deleteMemberBtn').addEventListener('click', () => {
+        if (!loginId) {
+            alert('로그인 정보가 없습니다.');
+            return;
+        }
+
+        const confirmed = confirm('정말로 회원 탈퇴하시겠습니까? 이 작업은 되돌릴 수 없습니다.');
+
+        if (confirmed) {
+            fetch(`/api/mypage/delete`, {
+                method: 'DELETE',
+                credentials: 'include'
+            })
+                .then(response => {
+                    if (response.ok) {
+                        alert('회원 탈퇴가 완료되었습니다.');
+                        window.location.href = '/login.html'; // 로그인 페이지로 이동
+                    } else {
+                        alert('회원 탈퇴에 실패했습니다.');
+                    }
+                })
+                .catch(error => {
+                    console.error('삭제 요청 중 오류 발생:', error);
+                    alert('오류가 발생했습니다.');
+                });
+        }
+    });
+</script>
 </body>
 </html>
