--- a/src/main/resources/static/save.html
+++ b/src/main/resources/static/save.html
@@ -5,7 +5,7 @@
 	<title>save</title>
 </head>
 <body>
-	<form action="/member/save" method="post">
+	<form action="/save" method="post">
 		아이디 : <input type="text" name="memberId"> <br>
 		비밀번호 :<input type="password" name="memberPassword"> <br>
 		닉네임 : <input type="text" name="memberNickname"> <br>
