fix: 엔드포인트 수정에 따라 잘못된 코드 수정 #21

--- a/src/main/resources/static/save.html
+++ b/src/main/resources/static/save.html
@@ -5,8 +5,8 @@
 	<title>save</title>
 </head>
 <body>
-	<form action="/save" method="post">
-		아이디 : <input type="text" name="memberId"> <br>
+	<form action="/signup" method="post">
+		아이디 : <input type="text" name="providerId"> <br>
 		비밀번호 :<input type="password" name="memberPassword"> <br>
 		닉네임 : <input type="text" name="memberNickname"> <br>
 		<input type="submit" value="회원가입">
