--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,9 +5,9 @@
 	<title>로그인</title>
 </head>
 <body>
-	<form action="/member/login" method="post">
-	아이디 : <input type="text" name="memberId"> <br>
-	비밀번호 : <input type="password" name="memberPassword"> <br>
+	<form action="/api/login" method="post">
+	아이디 : <input type="text" name="providerId"> <br>
+	비밀번호 : <input type="password" name="password"> <br>
 	<input type="submit" value="로그인">
 	</form>
 </body>
